<resources>
    <string name="app_name">布袋好物test</string>
    <string name="cap_home_car">购物车</string>
    <string name="cap_home_main">首页</string>
    <string name="cap_home_mine">我的</string>
    <string name="cap_invite_code">我的推广码</string>
    <string name="login_account">登录账号</string>
    <string name="account_pwd_login">账号密码登录</string>
    <string name="invite_code">邀请码</string>
    <string name="agreement">我已阅读并同意《用户协议》</string>
    <string name="get_code">获取验证码</string>
    <string name="agree_and_register">同意协议并注册</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="verification_code_login">验证码登录</string>
    <string name="new_user_register">新用户注册</string>
    <string name="wechat_login">微信登录</string>
    <string name="register">注册</string>
    <string name="vip">会员</string>
    <string name="type">分类</string>
    <string name="noUpdate">当前已是最新版本</string>
    <string name="update">更新</string>
    <string name="input_search_text">请输入您想搜索的内容</string>
    <string name="location">定位中..</string>
    <string name="setting">设置</string>
    <string name="should_open_gps">需要手动去设置界面打开GPS</string>
    <string name="no_permission">请先设置权限</string>
    <string name="other_login">---&#160;&#160;其他登录方式&#160;&#160;---</string>
    <string name="startup">启动页</string>
    <string name="mobile">手机号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="code">验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="reset_password">重置密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="category">商品分类</string>
    <string name="sack_goods">布袋好物</string>
    <string name="hot">大牌特卖中</string>
    <string name="go_assemble">去拼团</string>
    <string name="flash_sale">限时抢购</string>
    <string name="more">查看更多</string>
    <string name="recommend_for_you">为你推荐</string>
    <string name="assemble_every_day">每日拼团</string>
    <string name="loading">加载中..</string>
    <string name="loading_success">加载成功</string>
    <string name="pulling_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="empty" />
    <string name="head_portrait">头像</string>
    <string name="login_and_register">登录/注册</string>
    <string name="logout">退出登录</string>
    <string name="address_detail">详细地址</string>
</resources>