<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.customers.zktc.ui.user.sign.code.SignCodeModel" />
        <variable
            name="params"
            type="com.customers.zktc.ui.user.sign.SignParams" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/title_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="20.0sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/icaile_white_bg_with_indent_bottom_line"
            android:hint="@string/mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_s">

            <!--suppress AndroidUnknownAttribute -->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_mobile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/transparent"
                android:afterTextChanged="@{vm::onInputFinish}"
                android:drawablePadding="14dp"
                android:inputType="phone"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@={params.phone}"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.customers.zktc.base.view.VerificationCodeView
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="23.0dp"
            android:paddingBottom="23.0dp"
            app:vCodeBackgroundFocus="@drawable/verification_code_et_bg_focus"
            app:vCodeBackgroundNormal="@drawable/verification_code_et_bg_normal"
            app:vCodeDataLength="4"
            app:vCodeHeight="48.0dp"
            app:vCodeMargin="20.0dp"
            app:vCodeTextColor="@color/black"
            app:vCodeTextSize="23.0sp"
            app:vCodeWidth="48.0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <Button
            android:id="@+id/get_login"
            android:layout_width="0dp"
            android:layout_height="46.0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/login_button_selector"
            android:gravity="center"
            android:text="@string/get_code"
            android:enabled="@{vm.phoneLogin}"
            android:textColor="@color/login_selector"
            android:textSize="20.0sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <TextView
            android:id="@+id/login_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:onClick="@{vm::onPasswordLoginClick}"
            android:paddingBottom="10dp"
            android:text="@string/account_pwd_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_login" />

        <TextView
            android:id="@+id/goto_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/new_user_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/other_login"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20.0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/weixin_login_icon"
                android:drawablePadding="10dp"
                android:text="@string/wechat_login" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>